# 7-APIS/internal/infra/webserver/handlers/product_handlers.go
@@ -22,6 +22,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// CreateProduct godoc
+// @Summary 		Create products
+// @Description 	Create products
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			request body dto.CreateProductInput true "product request"
+// @Success 		201
+// @Failure 		500 {object} Error
+// @Router 			/products [post]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -37,15 +48,31 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	err = h.ProductDB.Create(p)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
 }
 
+// GetProduct godoc
+// @Summary 		Get product
+// @Description 	Get product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path string true "Product ID" Format(uuid)
+// @Success			200 {object} entity.Product
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [get]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: "Product ID is required"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	product, err := h.ProductDB.FindByID(id)
@@ -53,10 +80,24 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 		w.WriteHeader(http.StatusNotFound)
 		return
 	}
+	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(product)
 }
 
+// UpdateProduct godoc
+// @Summary 		Update product
+// @Description 	Update product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path string true "Product ID" Format(uuid)
+// @Param 			request body dto.CreateProductInput true "product request"
+// @Success 		200
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [put]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -82,11 +123,25 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	err = h.ProductDB.Update(&product)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteProduct godoc
+// @Summary 		Delete product
+// @Description 	Delete product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path string true "Product ID" Format(uuid)
+// @Success 		204
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [delete]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -106,6 +161,19 @@ func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNoContent)
 }
 
+// ListProducts godoc
+// @Summary 		List products
+// @Description 	List products
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			page query string false "page number"
+// @Param 			limit query string false "limit"
+// @Success 		200 {array} entity.Product
+// @Failure 		404 {object} Error
+// @Failure 		500 {object} Error
+// @Router 			/products [get]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) ListProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
@@ -124,6 +192,8 @@ func (h *ProductHandler) ListProducts(w http.ResponseWriter, r *http.Request) {
 	products, err := h.ProductDB.FindAll(pageInt, limitInt, sort)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.Header().Set("Content-Type", "application/json")
